src/test/compile-fail/infinite-vec-type-recursion.rs
// -*- C -*-

type x = vec[x];

fn main() -> () {
  let x b = vec();
}
